aiwa.log
  File "./main.py", line 85
    except Exception e:
                     ^
SyntaxError: invalid syntax
  File "./main.py", line 85
    except Exception e:
                     ^
SyntaxError: invalid syntax
  File "./main.py", line 86
    except Exception e:
                     ^
SyntaxError: invalid syntax
  File "./main.py", line 86
    except Exception e:
                     ^
SyntaxError: invalid syntax
  File "./main.py", line 89
    except Exception e:
                     ^
SyntaxError: invalid syntax
INFO:mpd:Calling MPD connect('localhost', 6600, timeout=None)
2017-08-18 10:35:25,762 - __main__ - DEBUG - Test Eintrag vor dem Start von main
2017-08-18 10:35:39,430 - __main__ - ERROR - via Tastatur beendet
2017-08-18 10:38:27,642 - __main__ - INFO - Starte die Anwendung
